--- a/Changes
+++ b/Changes
@@ -1,3 +1,5 @@
+v0.0.6	Sun  7 Aug 09:47:04 BST 2022
+	* Upload to zef repository
 v0.0.5		Sun  3 Oct 17:27:49 BST 2021
 	* Switch Code type object for Pointer in NULL Callback
 v0.0.4		Wed 12 May 19:12:01 BST 2021
@@ -11,3 +13,4 @@ v0.0.2		Tue May 3 14:15:20 2016 +0100
 	* Bounce on moving to noise gang
 v0.0.1		Tue Mar 15 21:01:58 2016 +0000 
 	* INitial release
+
